# macro-intel

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.streamlit/: config.toml
macro_intel/: __init__.py
macro_intel/analytics/: correlations.py  significance.py  transforms.py
macro_intel/app/: cli.py  streamlit_app.py  styles.py
macro_intel/app/pages/: drift_view.py  feature_panel_view.py  network_view.py  portfolio_bridge.py  regime_dashboard.py
macro_intel/app/views/: currency_view.py  drift_view.py  feature_panel_view.py  network_view.py  portfolio_bridge.py  regime_dashboard.py
macro_intel/bridge/: analog.py  exposure_mapper.py  portfolio_context.py
macro_intel/config/: countries.py  indicators.py  settings.py
macro_intel/data/: cache.py  feature_panel.py  fred_client.py  market_client.py  worldbank_client.py
macro_intel/graphs/: contagion.py  macro_dependency.py  portfolio_exposure.py  renderer.py
macro_intel/models/: asset_returns.py  diagnostics.py  priors.py  regime_hmm.py
macro_intel/monitoring/: data_quality.py  drift.py  reports.py
macro_intel/tests/: conftest.py  test_bridge.py  test_drift.py  test_feature_panel.py  test_graphs.py  test_regime_model.py
